Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

19 April 2004 Mariette Yvinec
- fixed insert_in_edge in Regular_triangulation_2
- changed insert case VERTEX in  Regular_triangulation_2. 
   The new version is  more easy to debug

17 April 2004 Sylvain Pion
- Fix copy-paste bug in T_face_base_with_info_2.h .

14 April 2004 Andreas Fabri
- Made Triangulation_data_structure_2::create_face more efficient

13 April 2004 Mariette Yvinec
- fixed test_conflict in Delaunay and Contrained_Delaunay.
  It was not working when the query point was located 
  on an edge of the convex hull

13 April 2004 Mariette Yvinec
- fixed a typedef in examples/Triangulation_2/regular.C
  (this bug was related to  changes in Regular_triangulation_euclidean_traits
  made on March 31)

8 April 2004 Andreas Fabri
- Replaced in Triangulation_2::locate method walk along a straight line with zig zag walk

5 avril 2004 Mariette Yvinec
- fixed a bug in Triangulation_hierarchy_vertex_base_2
  (bug intoduced last week : abusive comment of a typedef)

31 March 2004 Mariette Yvinec
- Weighted_point : remake the constructor from Point implicit 
  otherwise member functions of the base triangulationclass
 cannot be called with Bare_points.
- Replace the typedef or Regular_triangulation_euclidean_traits :
  typedef Weighted_point                        Point_2;
  by a Weighted_point_mapper_2.
  This will be necessary to adapt to Kernel traits when Weighted_point
  will be in Kernel 
  but  this does not solve satisfactory the  Weighted_point_2 - Point_2
  type problem of regular, hence the need for the implicit converter.

25 March 2004 Radu Ursu
- made doc work with the new implementation of Manual tools.

25 February 2004 Sylvain Pion
- Make cw and ccw public in Delaunay_2.

19 February 2004 Sylvain Pion
- Weighted_point :
  - make constructor explicit, 
  - make .weight() and .point() return references,