@@ -63,19 +63,32 @@ public:
   typedef typename T::Point           Point;  
   typedef typename T::Segment         Segment;
   typedef typename T::Vertex          Vertex;
-  typedef typename T::Vertex_iterator	Vertex_iterator;
+  typedef typename T::Finite_vertices_iterator
+                                      Finite_vertices_iterator;
+  typedef typename T::Hidden_vertices_iterator
+                                      Hidden_verticex_iterator;
 
   Qt_layer_show_points(T &t) : rt(t){};
   void draw()
   {  
-    Vertex_iterator it = rt.vertices_begin(), 
-                    beyond = rt.vertices_end();
+    Finite_vertices_iterator it = rt.finite_vertices_begin(), 
+                    beyond = rt.finite_vertices_end();
     *widget << CGAL::GREEN << CGAL::PointSize (3) 
 		<< CGAL::PointStyle (CGAL::DISC);    
     while(it != beyond) {      
       *widget << (*it).point();
       *widget << Circle((*it).point().point(), (*it).point().weight());
       ++it;
+    }
+
+    Hidden_verticex_iterator hit=rt.hidden_vertices_begin(),
+                       hbeyond = rt.hidden_vertices_end();
+    *widget << CGAL::YELLOW << CGAL::PointSize (3) 
+		<< CGAL::PointStyle (CGAL::DISC);  
+    while(hit != hbeyond) {      
+      *widget << (*hit).point();
+      *widget << Circle((*hit).point().point(), (*hit).point().weight());
+      ++hit;
     }
   };
 private:
